@@ -1,5 +1,9 @@
 2002-09-08  David Billinghurst <David.Billinghurst@riotinto.com
-
+	
 	* winkill.c:  Copy file from gcl tree
 	* tclwinkill.c: Ditto
 
+2002-09-08   David Billinghurst <David.Billinghurst@riotinto.com
+
+	* winkill.c:  Tweak headers so it compiles in maxima tree
+	* tclwinkill.c: Ditto
